Fix gaps calculation, add useMultiKeyPress, ErrorBOundary component

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -14,6 +14,12 @@
   margin: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .plugin__container {
   position: relative;
   display: flex;
@@ -60,12 +66,15 @@
 .sortable__item {
   list-style: none;
   background-color: var(--white);
+  border-radius: 2px;
   cursor: grab;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
   height: 30px;
   gap: 9px;
+  padding: 5px;
 }
 
 .sortable__item-icon {
@@ -73,6 +82,7 @@
 }
 
 .sortable__list {
+  width: 100%;
   padding: 0;
 }
 
@@ -87,8 +97,22 @@
   opacity: 1;
 }
 
+.sortable__item_dragged > .sortable__item-icon {
+  opacity: 1;
+}
+
 .sortable__item:hover > .sortable__item-icon > svg {
-  fill: var(--black);
+  opacity: 1;
+  fill-opacity: 1;
+}
+
+.sortable__item_dragged > .sortable__item-icon > svg {
+  opacity: 1;
+  fill-opacity: 1;
+}
+
+.sortable__item_dragged {
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.1);
 }
 
 .toggle__wrapper {
@@ -188,4 +212,12 @@
   height: 1px;
   background-color: var(--color-bg);
   margin-top: 16px;
+}
+
+.error__block {
+  padding: 16px;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  color: var(--color-text);
 }
