--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -145,6 +145,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 2px;
   width: 50%;
   height: 100%;
   cursor: pointer;
@@ -157,8 +158,13 @@ input::-webkit-inner-spin-button {
 .toggle__input:checked + .toggle__container > .toggle__block:last-of-type:hover {
   background-color: var(--color-bg);
 }
-
+.toggle__input:checked + .toggle__container > .toggle__block:first-of-type:hover {
+  background-color: var(--color-bg-hover);
+}
 .toggle__input:not(:checked) + .toggle__container > .toggle__block:last-of-type:hover {
+  background-color: var(--color-bg-hover);
+}
+.toggle__input:not(:checked) + .toggle__container > .toggle__block:first-of-type:hover {
   background-color: var(--color-bg);
 }
 
