--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -63,6 +63,10 @@ input::-webkit-inner-spin-button {
   gap: 8px;
 }
 
+.section__input {
+  width: 55px;
+}
+
 .sortable__item {
   list-style: none;
   background-color: var(--white);
@@ -152,7 +156,8 @@ input::-webkit-inner-spin-button {
 }
 
 .toggle__input:focus + .toggle__container {
-  /* box-shadow: inset 0 0 0 1px var(--color-bg-focus); */
+  border: 1px solid var(--color-bg-focus);
+  outline: 1px solid var(--color-bg-focus);
 }
 
 .toggle__input:checked + .toggle__container > .toggle__block:last-of-type {
@@ -169,34 +174,57 @@ input::-webkit-inner-spin-button {
   border-radius: 2px 0 0 2px;
 }
 
-.input__wrapper {
+.input__container {
   position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
   gap: 4px;
 }
 
-.input {
-  display: block;
+.input__wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  position: relative;
   width: 100%;
   box-sizing: border-box;
+  border: 1px solid var(--color-bg);
+  border-radius: 2px;
+  min-width: 38px;
+  width: 100%;
+  height: 30px;
+}
+
+.input__wrapper-hover {
+  border: 1px solid transparent;
+}
+
+.input__container:hover > .input__wrapper-hover {
+  border: 1px solid var(--color-bg);
+}
+
+.input__icon {
+  margin-left: 8px;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
   padding: 0px 6px;
   border: 0;
   outline: 0;
-  width: 38px;
-  height: 30px;
   color: var(--color-text);
   font-weight: 400;
   font-size: 11px;
   line-height: 13px;
-  border: 1px solid var(--color-bg);
-  border-radius: 2px;
 }
 
-.input:focus {
+.input__wrapper:focus-within {
   border: 1px solid var(--color-bg-focus);
+  outline: 1px solid var(--color-bg-focus);
 }
 
 .input__unit {
@@ -219,4 +247,44 @@ input::-webkit-inner-spin-button {
   font-size: 11px;
   line-height: 13px;
   color: var(--color-text);
+}
+
+.paddings__container {
+  width: 100%;
+  padding: 16px 16px 0 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.paddings_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.paddings__header {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 13px;
+  color: var(--color-text);
+}
+
+.paddings__fields {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 8px;
+}
+
+.paddings__field {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 60px;
+  gap: 8px;
 }
