--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -206,6 +206,10 @@ input::-webkit-inner-spin-button {
   border: 1px solid var(--color-bg);
 }
 
+.input__wrapper-hover:hover {
+  border: 1px solid var(--color-bg);
+}
+
 .input__icon {
   margin-left: 8px;
 }
